fix: implement correct anchor

--- a/css/style.css
+++ b/css/style.css
@@ -253,9 +253,9 @@ html {
 	.icon-field{
 		margin: 0;
 	}
-	body.noscroll{
+	/* body.noscroll{
 		overflow: hidden;
-	}
+	} */
 
 }
 @media(max-width:768px){
@@ -326,9 +326,9 @@ html {
 	.icon-field.active .line3 {
 		transform: rotate(765deg) translateY(-5.5px);
 	}
-	body.noscroll{
+	/* body.noscroll{
 		overflow: hidden;
-	}
+	} */
 
 	.section-footer{
 		width: 100%;
